syntax = "proto3";


message ClientScope {
    int32 id = 1;
    string client_id = 2;
    int32 redirect_uri_id = 3;
    string created_at = 4;
}
message Client {
    string id = 1;
    int32 redirect_uri_id = 2;
    string name = 3;
    string desc = 4;
    string passphrase = 5;
    string created_at = 6;
    string updated_at = 7;
}
message RedirectUri {
    int32 id = 1;
    string url = 2;
    string created_at = 3;
    string client_id = 4;
}
message Scope {
    int32 id = 1;
    string name = 2;
    string desc = 3;
    string created_at = 4;
    string updated_at = 5;
}


message EnquireClientScopeRequest {
    int64 id =1;
}
message EnquireClientRequest {
    int64 id =1;
}
message EnquireRedirectUriRequest {
    int64 id =1;
}
message EnquireScopeRequest {
    int64 id =1;
}


service MessageRpc {
    rpc getClientScope (EnquireClientScopeRequest) returns (ClientScope) { }
    rpc getClient (EnquireClientRequest) returns (Client) { }
    rpc getRedirectUri (EnquireRedirectUriRequest) returns (RedirectUri) { }
    rpc getScope (EnquireScopeRequest) returns (Scope) { }
}
